# GORILLA_APPLETS

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  Makefileold  README.md  SRC_CORE  TODO.md  pusher_tetra_poly_save.f90  start_single_alpha_run.sh
.github/workflows/: CI.yml  perf.yml
EXAMPLES/ALPHA_LIFETIME/: alpha_lifetime.inp  gorilla.inp  gorilla_applets.inp  plot_alpha_lifetime.m  plot_alpha_lifetime.py  seed.inp  tetra_grid.inp
EXAMPLES/Boltzmann_test/: boltzmann.inp  gorilla.inp  gorilla_applets.inp  mono_energetic_transp_coef.inp  total_dwell_times.inp
EXAMPLES/MONO_ENERGETIC_TRANSPORT/: README.md  gorilla.inp  gorilla_applets.inp  gorilla_applets_main.x  mono_energetic_transp_coef.inp  plot.py  run.sh  seed.inp  tetra_grid.inp
EXAMPLES/POINCARE_INVARIANT/: MHD_EQUILIBRIA  gorilla.inp  gorilla_applets.inp  plot_poincare_invariant.m  tetra_grid.inp
EXAMPLES/anomalous_transport/: anomalous.tex  anomalous_transport.inp  gorilla.inp  gorilla_applets.inp  plots.m  tetra_grid.inp
EXAMPLES/boltzmann_test/: boltzmann.inp  gorilla.inp  gorilla_applets.inp  seed.inp  tetra_grid.inp
EXAMPLES/collisions_with_energy_and_momentum_conservation/: boltzmann.inp  field_divB0.inp  gorilla.inp  gorilla_applets.inp  preload_for_SYNCH.inp  test  test.f90  tetra_grid.inp
EXAMPLES/divertor_heat_loads_(to_be_finished)/: boltzmann.inp  divertor_heat_loads.inp  field_divB0.inp  gorilla_applets.inp  tetra_grid.inp
EXAMPLES/divertor_heat_loads_lambda_0.7/: DATA  divertor_heat_loads.inp  field_divB0.inp  field_divB0_from_letter_canonical.inp  field_divB0save.inp  gorilla.inp  gorilla_applets.inp  tetra_grid.inp  tetra_gridsave.inp
EXAMPLES/field_line_tracing/: background  field_divB0.inp  field_line_tracing.inp  gorilla.inp  gorilla_applets.inp  tetra_grid.inp
EXAMPLES/helical_core/: MHD_EQUILIBRIA  gorilla.inp  gorilla_applets.inp  helical_core.inp  plots.m  tetra_grid.inp
EXAMPLES/rmp_response_currents/: gorilla.inp  gorilla_applets.inp  plots.m  rmp_response_currents.inp  tetra_grid.inp
EXAMPLES/self_consistent_electric_field/: boltzmann.inp  gorilla.inp  gorilla_applets.inp  self_consistent_ef.inp  tetra_grid.inp
INPUT/: alpha_lifetime.inp  boltzmann.inp  divertor_heat_loads.inp  field_line_tracing.inp  global_transport_fit.inp  gorilla_applets.inp  km_benchmark.inp  mono_energetic_transp_coef.inp  reversibility_test.inp  seed.inp  seed_alternative_option.inp  self_consistent_ef.inp  total_dwell_times.inp  usual_transport_benchmark.inp
MATLAB/: alpha_spline.m  example_1.m  example_2.m  example_3.m  example_4.m  example_5.m  mono_energetic_transport.m  mono_energetic_transport_Georg.mlx  mono_energetic_transport_livescript.mlx  plot_Poincare.mlx  precomputation_alpha_lifetime.m  precomputation_alpha_lifetime_cpu.m  precomputation_fluxtv.m  reversibility_test_plot.m
MATLAB/functions/: load_copy_transport_coef.m
REVERSIBILITY_TEST/: reversibility_test_plot.m
RUN/first_test/: boltzmann.inp  gorilla.inp  tetra_grid.inp  total_dwell_times.inp
SETUP_MONO/: mono_energetic_transport.m
SRC/: .pusher_tetra_analytic.f90.svz  CMakeLists.txt  SetWorkingPrecision.f90  alpha_lifetime_gorilla_mod.f90  anomalous_transport_displacement_mod.f90  anomalous_transport_mod.f90  boltzmann_mod.f90  boltzmann_supporting_functions_mod.f90  boltzmann_types_mod.f90  boltzmann_writing_data_mod.f90  collis_ions_mod.f90  direct_vmec_integrator_mod.f90  divertor_heat_loads_mod.f90  field_line_tracing_mod.f90  flux_deviation_mod.f90  fluxtv_mod.f90  fluxtv_pusher_mod.f90  global_transport_fit_core_mod.f90  global_transport_fit_gorilla_mod.f90  global_transport_fit_io_mod.f90  global_transport_fit_math_mod.f90  global_transport_fit_mod.f90  global_transport_fit_settings_mod.f90  global_transport_fit_types_mod.f90  gorilla_applets_main.f90  gorilla_applets_settings_mod.f90  gorilla_applets_sub_mod.f90  gorilla_applets_types_mod.f90  km_benchmark_diagnostics_mod.f90  km_benchmark_mod.f90  km_benchmark_settings_mod.f90  kramers_moyal_transport_mod.f90  llsq.f90  marker_distribution_mod.f90  metric_geometry_mod.f90  mono_energetic_transp_coef_settings_mod.f90  odeint_allroutines.f  odeint_allroutines.f90  perturbation_field_mod.f90  poincare_invariances_mod.f90  (+24 more)
SRC/anomalous_transport/: anomalous_transport_displacement_mod.f90  anomalous_transport_mod.f90  utils_anomalous_transport_mod.f90
SRC/helical_core/: helical_core_mod.f90  utils_helical_core_mod.f90
SRC/rmp_response_currents/: rmp_response_currents_mod.f90  utils_rmp_response_currents_mod.f90
TESTS/: CMakeLists.txt  _ci_utils.py  test_alpha_lifetime.py  test_field_line_tracing.py  test_global_transport_fit.f90  test_km_benchmark_diagnostics.f90  test_km_benchmark_settings.f90  test_kramers_moyal.f90  test_mono_energetic_transport.py  test_multi_species_collision.f90
TESTS/REFERENCE/field_line_tracing/: fort.75
TESTS/scripts/: compare_timings.py
docs/plans/: 2026-05-08-ou-collision-operator-design.md  2026-05-15-ou-collision-operator-euler-design.md
scripts/: convert_and_compare_d11.py  plot_global_transport_validation.py  run_km_benchmark_39461.sh
test/: boltzmann.inp  field_divB0.inp
test_collis/: new_test  test_collis_new.f90  test_collis_old.f90
